# LibCurl4Android

./: README.md  build.gradle  settings.gradle
app/: CMakeLists.txt  build.gradle
app/src/androidTest/java/com/example/libcurl4java/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: ftpUtil.hpp  logUtil.hpp  native-lib.cpp
app/src/main/java/com/example/libcurl4java/: MainActivity.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml
app/src/test/java/com/example/libcurl4java/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
